--- a/index.html
+++ b/index.html
@@ -246,9 +246,9 @@
 			  <h5 class="header-subtitle white-text col s12 light">Registrati alla newsletter per rimanere aggiornato sul rilascio di nuove funzionalità o nuove applicazioni.</h5>
 			</div>	
 			<div id="sib-form-container" class="sib-form-container">
-				<form id="sib-form" method="POST" action="https://ff463f74.sibforms.com/serve/MUIEAKeiPrHXbZoHBmcOuGMxqzIBMP1Rf-biCbGLOrW9C5a66aH49P5NjmKqbU8FjYdSOWAZ-wMLPpAtzE3wwDZuykDxh5iHjqGMwdBxAIK5CFyDNCoXoN5u-yqVEPdVLJ1ExfnT6RcPWcu8PPqZ-YU7Du_Lok2pYbMT317l73ICp0f4aFw72D_rdY3idnHarOi2_IMaKag4bNki" target="_blank" novalidate>
+				<form id="sib-form" method="POST" action="https://ff463f74.sibforms.com/serve/MUIEAD6qeudbXKVoFBmWKbP5FJZ-5zz0bnJuCiTzTSvu1yrD3WUOnGwqiFjzaPtEZIbIteTonv2tqxoEflKQEMIrpcOL6zpRhuRj8Kowgg_fbeqOmPv4r2UILBz-No5cTyymw4N9mAEvMu0spzfM9FNJFiHbsMapqEO7LiiILVIaHoyNS0vq84QdlB42-20bSnHm7xt1tI2p0m0o" target="_blank" novalidate>
 				  <div class="col s12 center">
-					<button class="btn btn-registrazione waves-effect waves-light red darken-4 btn-small" type="submit" name="action">Voglio iscrivermi!
+					<button class="btn btn-registrazione btn-lg active waves-effect waves-light red darken-4 btn-small" aria-pressed="true" type="submit" name="action">Iscriviti!
 							<i class="material-icons right">send</i>
 					</button>				
 				  </div>
@@ -270,9 +270,11 @@
            <h2>Assistenza</h2>
 		   <h5 class="header-subtitle col s12 light">Compila il seguente questionario per ricevere assistenza. 
 		   <br>Ti ricontatteremo entro 24 ore.</h5>
+			<div id="assistenza-form-container" class="assistenza-form-container">
+             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN_yqQzgZ0gC1O8fjrmpNN1cdPPj9dfYtWM-wuQz2H29Dpkg/viewform?usp=sf_link" class="btn btn-assistenza btn-lg active waves-effect waves-light red darken-4 btn-small" target="_blank" role="button" aria-pressed="true">Apri il ticket!<i class="material-icons right">event_note</i></a>
+			</div>
           </div>
-		  <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN_yqQzgZ0gC1O8fjrmpNN1cdPPj9dfYtWM-wuQz2H29Dpkg/viewform?usp=pp_url" target="_blank" class="btn btn-assistenza waves-effect waves-light red darken-4 btn-small"><i class="material-icons right">event_note</i>Compila il form</a>
-          </div>
+         </div>
       </div>
     </div>
   </div>
