--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 		   <h5 class="header-subtitle col s12 light">Compila il seguente questionario per ricevere assistenza. 
 		   <br>Ti ricontatteremo entro 24 ore.</h5>
 			<div id="assistenza-form-container" class="assistenza-form-container">
-             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN_yqQzgZ0gC1O8fjrmpNN1cdPPj9dfYtWM-wuQz2H29Dpkg/viewform?usp=sf_link" class="btn btn-assistenza btn-lg active waves-effect waves-light red darken-4 btn-small" target="_blank" role="button" aria-pressed="true">Apri il ticket!<i class="material-icons right">event_note</i></a>
+             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN_yqQzgZ0gC1O8fjrmpNN1cdPPj9dfYtWM-wuQz2H29Dpkg/viewform?usp=pp_url" class="btn btn-assistenza btn-lg active waves-effect waves-light red darken-4 btn-small" target="_blank" role="button" aria-pressed="true">Apri il ticket!<i class="material-icons right">event_note</i></a>
 			</div>
           </div>
          </div>
