--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
 				</div>
 				<div class="card-content">
 				  <span class="card-title activator grey-text text-darken-4">Bolle Web</span>
-				  <p><a href="http://sapservizi.camst.it:8105/sap/bc/webdynpro/sap/zmmbowwd" target="_blank">Link</a></p>
+				  <p><a href="http://sapservizi.camst.it:8105/sap/bc/webdynpro/sap/zmmbowwdn" target="_blank">Link</a></p>
 				</div>
 				<div class="card-reveal">
 				  <span class="card-title grey-text text-darken-4">Bolle Web<i class="material-icons right">close</i></span>
-				  <p>App SAP per la stampa di DDT di trasferimento merci tra locali o vendita di pasti/semilavorati; Conferma di ricevimento merci, servizi, manutenzioni, materiali di consumo.</p>
+				  <p>App SAP per la stampa di DDT di trasferimento merci tra locali o la vendita di pasti/semilavorati; Conferma di ricevimento merci, servizi, manutenzioni, materiali di consumo.</p>
 				</div>
 			  </div>
 		   </div>
@@ -180,7 +180,7 @@
 				</div>
 				<div class="card-reveal">
 				  <span class="card-title grey-text text-darken-4">Foglio Vendite Web<i class="material-icons right">close</i></span>
-				  <p>App SAP per dichiarare e contabilizzare la vendita ai clienti di pasti e/o servizi.</p>
+				  <p>App SAP per consuntivare e contabilizzare la vendita ai clienti di pasti e/o servizi.</p>
 				</div>
 			  </div>
 		   </div>
@@ -197,7 +197,7 @@
 				</div>
 				<div class="card-reveal">
 				  <span class="card-title grey-text text-darken-4">Giornale di Produzione Web<i class="material-icons right">close</i></span>
-				  <p>App SAP per dichiarare i pasti prodotti, le ore lavorate, gli incassi e calcolo della produttività del locale.</p>
+				  <p>App SAP per consuntivare i pasti prodotti, le ore lavorate, gli incassi e calcolare la produttività del locale di produzione.</p>
 				</div>
 			  </div>
 		   </div>
@@ -208,11 +208,13 @@
 				</div>
 				<div class="card-content">
 				  <span class="card-title activator grey-text text-darken-4">Inventario Web</span>
-				  <p><a href="http://sapservizi.camst.it:8105/sap/bc/webdynpro/sap/zmminwwd" target="_blank">Link</a></p>
-				</div>
+<!--				  <p><a href="http://sapservizi.camst.it:8105/sap/bc/webdynpro/sap/zmminwwd" target="_blank">Link</a></p>
+-->
+              <p><a href="http://sapservizi.camst.it:8105/sap/bc/ui5_ui5/sap/zmminw/index.html" target="_blank">Link</a></p>
+</div>
 				<div class="card-reveal">
 				  <span class="card-title grey-text text-darken-4">Inventario Web<i class="material-icons right">close</i></span>
-				  <p>App SAP utilizzata per la compilazione dell'inventario delle materie prime/semilavorati di fine periodo.</p>
+				  <p>App SAP utilizzata per la compilazione dell'inventario di fine periodo di materie prime/semilavorati.</p>
 				</div>
 			  </div>
 		   </div>
@@ -246,7 +248,7 @@
 			  <h5 class="header-subtitle white-text col s12 light">Registrati alla newsletter per rimanere aggiornato sul rilascio di nuove funzionalità o nuove applicazioni.</h5>
 			</div>	
 			<div id="sib-form-container" class="sib-form-container">
-				<form id="sib-form" method="POST" action="https://ff463f74.sibforms.com/serve/MUIEAD6qeudbXKVoFBmWKbP5FJZ-5zz0bnJuCiTzTSvu1yrD3WUOnGwqiFjzaPtEZIbIteTonv2tqxoEflKQEMIrpcOL6zpRhuRj8Kowgg_fbeqOmPv4r2UILBz-No5cTyymw4N9mAEvMu0spzfM9FNJFiHbsMapqEO7LiiILVIaHoyNS0vq84QdlB42-20bSnHm7xt1tI2p0m0o" target="_blank" novalidate>
+				<form id="sib-form" method="POST" action="https://ff463f74.sibforms.com/serve/MUIEAJNm5TAlGwcn5QFWUrS-i6lxs7aiswMbbU5kIkVj0KPL8UEf6ly5PCN1MOKquvi7HarNZBOZO_Y-6Dti3sJjBMAA1CFLz3DZTiHjnyr_Yh27D1_oyLUQqh3yab8x664zo46D2W39pOTiuzbCdBzbe2443YVYlDt-6JVnFMUpkeVpvVVlsXVmzxnHZ9fQQCTGbJ1IEXJK_YvR" target="_blank" novalidate>
 				  <div class="col s12 center">
 					<button class="btn btn-registrazione btn-lg active waves-effect waves-light red darken-4 btn-small" aria-pressed="true" type="submit" name="action">Iscriviti!
 							<i class="material-icons right">send</i>
@@ -271,7 +273,7 @@
 		   <h5 class="header-subtitle col s12 light">Compila il seguente questionario per ricevere assistenza. 
 		   <br>Ti ricontatteremo entro 24 ore.</h5>
 			<div id="assistenza-form-container" class="assistenza-form-container">
-             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN_yqQzgZ0gC1O8fjrmpNN1cdPPj9dfYtWM-wuQz2H29Dpkg/viewform?usp=pp_url" class="btn btn-assistenza btn-lg active waves-effect waves-light red darken-4 btn-small" target="_blank" role="button" aria-pressed="true">Apri il ticket!<i class="material-icons right">event_note</i></a>
+             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN_yqQzgZ0gC1O8fjrmpNN1cdPPj9dfYtWM-wuQz2H29Dpkg/viewform?usp=sf_link" class="btn btn-assistenza btn-lg active waves-effect waves-light red darken-4 btn-small" target="_blank" role="button" aria-pressed="true">Apri il ticket!<i class="material-icons right">event_note</i></a>
 			</div>
           </div>
          </div>
